# json-schema-faker

./: .gitignore  Cargo.toml  README.md  example.yaml
.github/: releases.yaml
.github/workflows/: releases.yaml
src/: description.rs  main.rs
src/generators/: array.rs  boolean.rs  integer.rs  mod.rs  number.rs  string.rs  string_address.rs  string_birthday.rs  string_city.rs  string_country.rs  string_email.rs  string_job.rs  string_name.rs  string_phone.rs  string_state.rs  string_street.rs  string_surname.rs  string_zip.rs
